--- a/app/globals.css
+++ b/app/globals.css
@@ -68,6 +68,19 @@ h6 {
 	isolation: isolate;
 }
 
+/* Think transparent scrollbar */
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+::-webkit-scrollbar-thumb {
+	background-color: #888;
+	border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background-color: #555;
+}
+
 @layer utilities {
 	.text-balance {
 		text-wrap: balance;
